Menu mobile list fix ( not overflowing over menu items )

--- a/src/scss/components/_bag.scss
+++ b/src/scss/components/_bag.scss
@@ -15,7 +15,7 @@
   position: absolute;
   top: -74px;
   right: 30px;
-  z-index: 11;
+  z-index: 15;
   width: 40px;
 
   @include media-breakpoint-up(lg) {
@@ -31,7 +31,7 @@
   position: absolute;
   top: -46px;
   right: 15px;
-  z-index: 15;
+  z-index: 16;
   border: 0;
   border-radius: 50px;
   height: 30px;
